--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "16.1.3",
     "react": "19.2.3",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
